--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/profile.jpg" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
@@ -98,7 +98,7 @@
                   </div>
                   <div class="skill-mf">
                     <p class="title-s">Skill</p>
-                    <span>Html & Css</span> <span class="pull-right">50%</span>
+                    <span>HTML & CSS</span> <span class="pull-right">50%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -124,7 +124,7 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Hello my name is yeil and I recently
+                      Hello my name is yeil and I recently graduated from Vancouver 
                     </p>
                     <p class="lead">
                       Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
@@ -267,8 +267,8 @@
                 <span class="ico-circle"><i class="bi bi-check"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="450" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text">WORKS COMPLETED</span>
+                <p data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="counter purecounter"></p>
+                <span class="counter-text">WORKS</span>
               </div>
             </div>
           </div>
@@ -458,7 +458,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Photography</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2017</span>
+                      <span class="w-ctegory">Piece</span> / <span class="w-date">18 Sep. 2017</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -698,15 +698,12 @@
                     </div>
                     <div class="more-info">
                       <p class="lead">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem
-                        expedita aperiam aliquid at.
-                        Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis
-                        mollitia inventore?
+                       I would love to personaly be attached 
                       </p>
                       <ul class="list-ico">
-                        <li><span class="bi bi-geo-alt"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                        <li><span class="bi bi-phone"></span> (617) 557-0089</li>
-                        <li><span class="bi bi-envelope"></span> contact@example.com</li>
+                        <li><span class="bi bi-geo-alt"></span> Langley, British Columbia </li>
+                        <li><span class="bi bi-phone"></span> (604)-780-3761</li>
+                        <li><span class="bi bi-envelope"></span> shinbowl99@hotmail.com</li>
                       </ul>
                     </div>
                     <div class="socials">
@@ -742,7 +739,7 @@
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
             -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+              Designed by <a href="https://bootstrapmade.com/">Yeil Shin</a>
             </div>
           </div>
         </div>
