--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Phtoshop Concept Design</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Photoshop</span> / <span class="w-date">2 Dec. 2022</span>
+                      <span class="w-ctegory">Photoshop</span> / <span class="w-date">Dec 2</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -192,7 +192,7 @@
             <div class="work-box">
               <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/japan copy.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
