--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
                       Hi, my name is yeil and I recently graduated from Vancouver Career College. 
                     </p>
                     <p class="lead">
-                      During my spare times I love to draw, do portrait photography and play guitar.
+                      I am passionate and motivated in creating simplistic, stylish, and modern designs. I would love to 
+
                     </p>
                     <p class="lead">
                       Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
