--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
                       Hi, my name is yeil and I recently graduated from Vancouver Career College. 
                     </p>
                     <p class="lead">
-                      I am passionate and motivated in creating simplistic, stylish, and modern designs. I would love to 
+                      I am passionate and motivated in creating simplistic, stylish, and modern designs.
 
                     </p>
                     <p class="lead">
                       Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
                       Nulla porttitor accumsan
-                      tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                      tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvina
                     </p>
                   </div>
                 </div>
@@ -197,9 +197,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Illustrator</h2>
+                    <h2 class="w-title">Post Card</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Illustration</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Illustrator</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -221,7 +221,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Indesign</h2>
+                    <h2 class="w-title">Brochure</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Indesign</span> / <span class="w-date">18 Sep.2018</span>
                     </div>
