--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/profile.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/profile 2.jpg" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
@@ -122,7 +122,7 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Hi, my name is yeil and I recently graduated from Vancouver Career College. 
+                      Hi, my name is yeil and I'm a graduate from Vancouver Career College. 
                     </p>
                     <p class="lead">
                       I am passionate and motivated in creating simplistic, stylish, and modern designs.
@@ -173,7 +173,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Phtoshop Concept Design</h2>
+                    <h2 class="w-title">Photoshop Concept Design</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Photoshop</span> / <span class="w-date">Dec 2</span>
                     </div>
@@ -215,7 +215,7 @@
             <div class="work-box">
               <a href="assets/img/FINAL PROJECT (INDESIGN).pdf" >
                 <div class="work-img">
-                  <img src="./assets/img/portfolio-details-3.jpg" alt="" class="img-fluid">
+                  <img src="./assets/img/brocheure.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -293,9 +293,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Photography</h2>
+                    <h2 class="w-title">Piece</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Piece</span> / <span class="w-date">18 Sep. 2017</span>
+                      <span class="w-ctegory">Photography</span> / <span class="w-date">18 Sep. 2017</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -334,7 +334,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="blog-single.html"><img src="assets/img/RESUME.jpg" alt="" class="img-fluid"></a>
+                <a href="./assets/img/resume.pdf"><img src="assets/img/RESUME.jpg" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
