--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             <div class="work-box">
               <a href="assets/img/final project AE.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/final project AE.mp4" alt="assets/img/final project AE.mp4" class="img-fluid">
+                  <img src="assets/img/assignment 4.mp4" alt="assets/img/final project AE.mp4" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -276,7 +276,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="final project html/images"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -285,22 +285,22 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/flower.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-6.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/flower.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Piece</h2>
+                    <h2 class="w-title">Growing</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Photography</span> / <span class="w-date">18 Sep. 2017</span>
+                      <span class="w-ctegory">Photography</span> / <span class="w-date">20 Jul. 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="assets/img/flower.jpg"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
