--- a/final project html/contact.html
+++ b/final project html/contact.html
@@ -113,7 +113,7 @@ color:white;
 <body>
   <!--id is the name of this div element-->
   <div id="container">
-    <img src="./images/logo.jpg" id="logo">
+    <img src="../images/logo.jpg" id="logo">
     <ul id="menu">
       <a href="index.html">
         <li>HOME</li>
