--- a/final project html/index.html
+++ b/final project html/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="./images/shin logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../images/shin logo.png" type="image/x-icon">
   <title>Shin Photography</title>
   <style>
     * {
@@ -113,7 +113,7 @@ color:white;
 <body>
   <!--id is the name of this div element-->
   <div id="container">
-    <img src="./images/logo.jpg" id="logo">
+    <img src="../images/logo.jpg" id="logo">
     <ul id="menu">
       <a href="index.html">
         <li>HOME</li>
@@ -130,7 +130,7 @@ color:white;
 
         </ul>
         <!--class can have thesame names inside the same html file -->
-        <div id="topheader">  <img src="/images/shin logo with circle .jpg" alt="home" class="Photography" height="300" width="550">
+        <div id="topheader">  <img src="./images/shin logo with circle .jpg" alt="home" class="Photography" height="300" width="550">
        
           <h2>WELCOME <span>TO SHIN PHOTOGRAPHY</span></h2>
           <p>We deliver the highest quality to the highest standards.
@@ -139,63 +139,63 @@ color:white;
         
           <div class="alltogether">
 
-            <img src="/images/flowers.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/flowers.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/japan.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/japan.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/korea palace.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/korea palace.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/korea old house.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/korea old house.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/smile-g6dfb61aac_1920.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/smile-g6dfb61aac_1920.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/korea.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/korea.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/palace-gd7208cce2_1920.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/palace-gd7208cce2_1920.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/sakura.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/sakura.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/pic1.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/pic1.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/pic 2.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/pic 2.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/pic 3.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/pic 3.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/pic 4.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/pic 4.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/pic 5.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/pic 5.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/pic 6.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/pic 6.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/pic 7.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/pic 7.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/pic 9.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/pic 9.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/pic 10.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/pic 10.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/pic11.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/pic11.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/pic12.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/pic12.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/pic 13.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/pic 13.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/pic 14.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/pic 14.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/pic15.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/pic15.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/pic16.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/pic16.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/pic17.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/pic17.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/pic18.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/pic18.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/pic19.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/pic19.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/pic20.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/pic20.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/pic21.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/pic21.jpg" alt="home" class="Photography" height="300px">
 
-            <img src="/images/pic22.jpg" alt="home" class="Photography" height="300px">
+            <img src="./images/pic22.jpg" alt="home" class="Photography" height="300px">
 
 
 </div>
