--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="./assets/img/favicon.png" rel="icon">
+  <link href="././assets/img/favicon.png" rel="icon">
  
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="./assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="./assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="./assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="./assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: DevFolio - v4.5.0
@@ -36,10 +36,10 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html"><img src="assets/img/shin logo.png"></a></h1>
+      <h1 class="logo"><a href="index.html"><img src="./assets/img/shin logo.png"></a></h1>
       
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <!-- <a href="index.html" class="logo"><img src="./assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -55,7 +55,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/vancouver.jpg)">
+  <div id="hero" class="hero route bg-image" style="background-image: url(./assets/img/vancouver.jpg)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
@@ -82,7 +82,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/profile 2.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="./assets/img/profile 2.jpg" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
@@ -165,9 +165,9 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/project1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="././assets/img/project1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="./assets/img/project1.jpg" alt="" class="img-fluid">
+                  <img src="././assets/img/project1.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -180,7 +180,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="./assets/img/project1.jpg"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="././assets/img/project1.jpg"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -189,9 +189,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/japan copy.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/japan copy.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/japan copy.jpg" alt="" class="img-fluid">
+                  <img src="./assets/img/japan copy.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -204,7 +204,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="assets/img/japan copy.jpg"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="./assets/img/japan copy.jpg"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -213,9 +213,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/FINAL PROJECT (INDESIGN).pdf" >
+              <a href="./assets/img/FINAL PROJECT (INDESIGN).pdf" >
                 <div class="work-img">
-                  <img src="./assets/img/brocheure.jpg" alt="" class="img-fluid">
+                  <img src="././assets/img/brocheure.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -237,9 +237,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/final project AE.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/final project AE.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/assignment 4.mp4" alt="assets/img/final project AE.mp4" class="img-fluid">
+                  <img src="./assets/img/assignment 4.mp4" alt="./assets/img/final project AE.mp4" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -252,7 +252,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="assets/img/final project AE.mp4"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="./assets/img/final project AE.mp4"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -261,9 +261,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/work-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-5.jpg" alt="" class="img-fluid">
+                  <img src="./assets/img/work-5.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -285,9 +285,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/flower.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/flower.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/flower.jpg" alt="" class="img-fluid">
+                  <img src="./assets/img/flower.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -300,7 +300,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="assets/img/flower.jpg"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="./assets/img/flower.jpg"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -334,7 +334,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="./assets/img/resume.pdf"><img src="assets/img/RESUME.jpg" alt="" class="img-fluid"></a>
+                <a href="././assets/img/resume.pdf"><img src="./assets/img/RESUME.jpg" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -342,7 +342,7 @@
                     <h6 class="category">RESUME</h6>
                   </div>
                 </div>
-                <h3 class="card-title"><a href="./assets/img/resume.pdf">Resume PDF</a></h3>
+                <h3 class="card-title"><a href="././assets/img/resume.pdf">Resume PDF</a></h3>
                 <p class="card-description">
                   
                 </p>
@@ -363,7 +363,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="blog-single.html"><img src="assets/img/COVER LETTER.jpg" alt="" class="img-fluid"></a>
+                <a href="blog-single.html"><img src="./assets/img/COVER LETTER.jpg" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -392,7 +392,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="blog-single.html"><img src="assets/img/CERTIFICATE.jpg" alt="" class="img-fluid"></a>
+                <a href="blog-single.html"><img src="./assets/img/CERTIFICATE.jpg" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -423,7 +423,7 @@
     </section><!-- End Blog Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/forest.jpg)">
+    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(./assets/img/forest.jpg)">
       <div class="overlay-mf"></div>
       <div class="container">
         <div class="row">
@@ -488,15 +488,15 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/purecounter/purecounter.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/typed.js/typed.min.js"></script>
+  <script src="./assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="./assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="./assets/vendor/php-email-form/validate.js"></script>
+  <script src="./assets/vendor/purecounter/purecounter.js"></script>
+  <script src="./assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="./assets/vendor/typed.js/typed.min.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="./assets/js/main.js"></script>
 
 </body>
 
