--- a/index.html
+++ b/index.html
@@ -211,11 +211,12 @@
               </div>
             </div>
           </div>
+
           <div class="col-md-4">
             <div class="work-box">
               <a href="./assets/img/FINAL PROJECT (INDESIGN).pdf" >
                 <div class="work-img">
-                  <img src="././assets/img/brocheure.jpg" alt="" class="img-fluid">
+                  <img src="./assets/img/brocheure.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -228,18 +229,19 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href=""> <span class="bi bi-plus-circle"></span></a>
+                      <a href="./assets/img/FINAL PROJECT (INDESIGN).pdf"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+
           <div class="col-md-4">
             <div class="work-box">
               <a href="./assets/img/final project AE.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="./assets/img/assignment 4.mp4" alt="./assets/img/final project AE.mp4" class="img-fluid">
+                  <img src="./assets/img//flower.png" alt="./assets/img/final project AE.mp4" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
