--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             <div class="work-box">
               <a href="./assets/img/final project AE.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="./assets/img//flower.png" alt="./assets/img/final project AE.mp4" class="img-fluid">
+                  <img src="./assets/img/flower img.png" alt="./assets/img/final project AE.mp4" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -263,9 +263,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/work-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/final project html/index.html" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="./assets/img/work-5.jpg" alt="" class="img-fluid">
+                  <img src="./assets/img/SHIN VERSE WHITE.jpg" alt="./assets/img/index.html" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -278,7 +278,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="final project html/images"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="./assets/img/index.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
